# llama.den

./: .aider.chat.history.md  .aider.input.history  CMakeLists.txt  README.md  acc.sm_120a.cubin  add-id.sm_120a.cubin  arange.sm_120a.cubin  argmax.sm_120a.cubin  argsort.sm_120a.cubin  binbcast.sm_120a.cubin  check_arch.py  check_attn.py  check_names.py  check_small.py  check_small_gguf.py  clamp.sm_120a.cubin  concat.sm_120a.cubin  conv-transpose-1d.sm_120a.cubin  conv2d-dw.sm_120a.cubin  conv2d.sm_120a.cubin  convert.sm_120a.cubin  convert_hf_to_gguf.py  cpy.sm_120a.cubin  cumsum.sm_120a.cubin  delta-net.sm_120a.cubin  den_dequant_nvfp4.sm_120a.cubin  den_diffusion_graph.sm_120a.cubin  den_dma_test  den_fattn_nvfp4.sm_120a.cubin  den_living_kernel.sm_120a.cubin  den_nullglass_kernel.sm_120a.cubin  den_nvfp4_kv_bench  den_nvfp4_kv_test  den_pefl.sm_120a.cubin  den_regcache_bench  den_regcache_test  den_rt_memory_query.sm_120a.cubin  den_shadow_verify.sm_120a.cubin  den_step_precision.sm_120a.cubin  den_tma_probe  (+113 more)
.github/: FUNDING.yml
common/: common.cpp  common.h  den_cats.h  sampling.cpp  speculative.cpp
docs/: inference_temp08.txt  isa_warden_report_20260507_0211.txt  isa_warden_report_20260507_0224.txt  isa_warden_report_20260507_0309.txt  isa_warden_report_20260507_0314.txt
examples/: CMakeLists.txt
examples/den-cli/: CMakeLists.txt
ggml/: CMakeLists.txt
include/: den_loader.h  llama.h
src/: CMakeLists.txt  den_loader.cpp  llama-build-context.cpp  llama-delta-net.cpp  llama-load-tensors.cpp  llama-model-loader.cpp  llama-model.cpp  llama-model.h  (+3 more)
(+296 files in other folders)
